Revision history for PostgreSQL extension semver.

0.18.0
      - Fixed file name in the v0.17.0 upgrade script.
      - Added the semverrange type.
      - Increased the minimum required version of PostgreSQL t0 9.2 for range
        type support.

0.17.0  2017-05-07T07:15:25Z
      - Fixed potential memory leak in is_semver function. Thanks to
        Arun Tejasvi Chaganty (Issue #29).

0.16.0  2016-12-04T00:51:19Z
      - Added `get_semver_*` accessor functions to retrieve the individual
        parts of a semver, thanks to Geoff Montee (PR #27).

0.15.0  2016-10-28T03:38:59Z
      - Fixed incorrect parsing of semver build metadata.
      - Fixed text foratting of build metadata-only semver values.
      - Implemented pre-release precedence scheme as per semantic versioning
        2.0.0 section 11. Thanks to Sergey Kozlov for the report (Issue #23).
      - Added Xavier Caron and Tom Davis as maintainers.

0.14.0  2016-08-11T05:38:27Z
      - Updated the extension version in `semver.control` to 0.13.0, which
        evidently I forgot to do for that release. Thanks to Stanislav Lorenc
        for the report (Issue #21).

0.13.0  2016-07-30T21:06:15Z
      - Fixed bug where a dash (-) was disallowed within the metadata part of
        a semver. Thanks to @TerraTech for the report (Issue #19) and Tom
        Davis for the fix (PR #20).

0.12.0  2016-06-11T06:00:19Z
      - Fixed bug where some items described in the SemVer 2.0.0 Spec, section
        10, were not properly recognized as semvers. Thanks to Xavier Caron
        for the fix (with tests!) (PR #17).

0.11.0  2016-05-23T20:29:49Z
      - Added `is_semver()`, thanks to a pull request from Xavier Caron
        (PR #14).
      - Fixed bug where version parts with non-leading 0 were considered
        invalid. Thanks to @JeremySTX for the report (Issue #15) and Tom Davis
        for the fix (PR #16).

0.10.0  2016-05-12T00:28:03Z
      - Updated extension to support Semantic Versioning 2.0.0, thanks to Tom