@@ -3,29 +3,27 @@ EXTENSION    = $(shell grep -m 1 '"name":' META.json | \
 EXTVERSION   = $(shell grep -m 1 '[[:space:]]\{8\}"version":' META.json | \
                sed -e 's/[[:space:]]*"version":[[:space:]]*"\([^"]*\)",\{0,1\}/\1/')
 
-DATA         = $(filter-out $(wildcard sql/*--*.sql),$(wildcard sql/*.sql))
+DATA		 = $(wildcard sql/*.sql)
 DOCS         = $(wildcard doc/*.mmd)
 TESTS        = $(wildcard test/sql/*.sql)
 REGRESS      = $(patsubst test/sql/%.sql,%,$(TESTS))
 REGRESS_OPTS = --inputdir=test --load-language=plpgsql
 MODULES      = $(patsubst %.c,%,$(wildcard src/*.c))
 PG_CONFIG   ?= pg_config
-PG91         = $(shell $(PG_CONFIG) --version | grep -qE " 8\.| 9\.0" && echo no || echo yes)
+EXTRA_CLEAN  = sql/$(EXTENSION)--$(EXTVERSION).sql
+PG92         = $(shell $(PG_CONFIG) --version | grep -qE " 8\.| 9\.0| 9\.1" && echo no || echo yes)
 
-ifeq ($(PG91),yes)
-DATA = $(wildcard sql/*--*.sql)
-EXTRA_CLEAN = sql/$(EXTENSION)--$(EXTVERSION).sql
+ifeq ($(PG92),no)
+$(error $(EXTENSION) requires PostgreSQL 9.2 or higher)
 endif
 
 PGXS := $(shell $(PG_CONFIG) --pgxs)
 include $(PGXS)
 
-ifeq ($(PG91),yes)
 all: sql/$(EXTENSION)--$(EXTVERSION).sql
 
 sql/$(EXTENSION)--$(EXTVERSION).sql: sql/$(EXTENSION).sql
 	cp $< $@
-endif
 
 .PHONY: results
 results:
