@@ -3,8 +3,10 @@ Revision history for PostgreSQL extension semver.
 0.18.0
       - Fixed file name in the v0.17.0 upgrade script.
       - Added the semverrange type.
-      - Increased the minimum required version of PostgreSQL t0 9.2 for range
+      - Increased the minimum required version of PostgreSQL to 9.2 for range
         type support.
+      - Fixed the `Makefile` so it properly installs `semver.sql`. Thanks to
+        Matej Marušák for the report (Issue #31).
 
 0.17.0  2017-05-07T07:15:25Z
       - Fixed potential memory leak in is_semver function. Thanks to
